First database realization Faculty api controller realization

--- a/ServerSide/SAMS.REST.API/appsettings.json
+++ b/ServerSide/SAMS.REST.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StudentAttendanceDB": "server=DESKTOP-LL8FIFM\\SQLEXPRESS;database=Student Attendance Monitoring;Trusted_Connection=True"
+  }
 }
