--- a/ServerSide/SAMS.Database.EF/SAMS.Database.EF.csproj
+++ b/ServerSide/SAMS.Database.EF/SAMS.Database.EF.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
       <PrivateAssets>all</PrivateAssets>
@@ -14,7 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SAMS.BusinessLogic\SAMS.BusinessLogic.csproj" />
-    <ProjectReference Include="..\SAMS.Database.EF\SAMS.Database.EF.csproj" />
   </ItemGroup>
 
 </Project>
