--- a/ClientSide/package.json
+++ b/ClientSide/package.json
@@ -18,11 +18,13 @@
     "@angular/core": "~9.0.0",
     "@angular/forms": "~9.0.0",
     "@angular/material": "^9.2.3",
+    "@angular/material-moment-adapter": "^9.2.3",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "moment": "^2.25.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
