--- a/ServerSide/SAMS.REST.API/appsettings.json
+++ b/ServerSide/SAMS.REST.API/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "StudentAttendanceDB": "server=DESKTOP-LL8FIFM\\SQLEXPRESS;database=Student Attendance Monitoring;Trusted_Connection=True"
+  },
+  "AuthorizationServicePaths": {
+    "ServiceUrl": "https://localhost:44367/",
+    "Method":  "api/Authorize"
   }
 }
