--- a/ClientSide/package.json
+++ b/ClientSide/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "~9.0.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "chart.js": "^2.9.3",
     "moment": "^2.25.3",
+    "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
